--- a/index.html
+++ b/index.html
@@ -1,14 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12Bool</title>
-    <link rel="stylesheet" href="css/12BoolFlex.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>12Bool</title>
+
+        <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+        
+        <link rel="stylesheet" href="css/12bool.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <main class="container">
+            <section class="ex-1">
+
+                <h2>
+                    Ex-1
+                </h2>
+
+                <div class="row">
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-2">
+                        2 col
+                    </div>
+                    <div class="col-5">
+                        5 col
+                    </div>
+                    <div class="col-5">
+                        5 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        12 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-8">
+                        8 col
+                    </div>
+                    <div class="col-2">
+                        2 col
+                    </div>
+                    <div class="col-2">
+                        2 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-2">
+                        2 col
+                    </div>
+                    <div class="col-2">
+                        2 col
+                    </div>
+                    <div class="col-6">
+                        6 col
+                    </div>
+                    <div class="col-1">
+                        1 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-6">
+                        <div class="row pink">
+                            <div class="col-2">
+                                Nested 2 col
+                            </div>
+                            <div class="col-2">
+                                Nested 2 col
+                            </div>
+                            <div class="col-8">
+                                Nested 8 col
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="row pink">
+                            <div class="col-6">
+                                Nested 6 col
+                            </div>
+                            <div class="col-6">
+                                Nested 6 col
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
+            <section class="ex-2">
+
+                <h2>
+                    Ex-2
+                </h2>
+
+                <div class="row">
+                    <div class="col-12">
+                        12 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-1">
+                        1 col
+                    </div>
+                    <div class="col-11">
+                        11 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-2">
+                        2 col
+                    </div>
+                    <div class="col-10">
+                        10 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-3">
+                        3 col
+                    </div>
+                    <div class="col-9">
+                        9 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-4">
+                        4 col
+                    </div>
+                    <div class="col-8">
+                        8 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-5">
+                        5 col
+                    </div>
+                    <div class="col-7">
+                        7 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-6">
+                        6 col
+                    </div>
+                    <div class="col-6">
+                        6 col
+                    </div>
+                </div>
+
+            </section>
+
+            <section class="ex-3-offset">
+
+                <h2>
+                    Offset
+                </h2>
+
+                <div class="row">
+                    <div class="col-1 col-offset-11">
+                        1 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-2 col-offset-10">
+                        2 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-3 col-offset-9">
+                        3 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-4 col-offset-8">
+                        4 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-5 col-offset-7">
+                        5 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-6 col-offset-6">
+                        6 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-7 col-offset-5">
+                        7 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-8 col-offset-4">
+                        8 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-9 col-offset-3">
+                        9 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-10 col-offset-2">
+                        10 col
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-11 col-offset-1">
+                        11 col
+                    </div>
+                </div>
+
+            </section>
+        </main>
+    </body>
 </html>
