--- a/index.html
+++ b/index.html
@@ -111,24 +111,24 @@
 
                 <div class="row">
                     <div class="col-6">
-                        <div class="row pink">
-                            <div class="col-2">
+                        <div class="row ">
+                            <div class="col-2 pink">
                                 Nested 2 col
                             </div>
-                            <div class="col-2">
+                            <div class="col-2 pink">
                                 Nested 2 col
                             </div>
-                            <div class="col-8">
+                            <div class="col-8 pink">
                                 Nested 8 col
                             </div>
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="row pink">
-                            <div class="col-6">
+                        <div class="row">
+                            <div class="col-6 pink">
                                 Nested 6 col
                             </div>
-                            <div class="col-6">
+                            <div class="col-6 pink">
                                 Nested 6 col
                             </div>
                         </div>
